# surrealdb-architecture

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  main.rs
src/client/: mod.rs
src/models/: message.rs  mod.rs  post.rs  user.rs
src/models/params/: user.rs
src/types/: id.rs  mod.rs
